--- a/monitor/package.json
+++ b/monitor/package.json
@@ -1,9 +1,10 @@
 {
   "name": "hizzamonitor",
+  
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev": "node index.js",
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -11,9 +12,6 @@
   "description": "",
   "dependencies": {
     "express": "^4.19.2",
-    "oracledb": "^6.5.1",
-    "prom-client": "^15.1.3",
-    "winston": "^3.13.1",
-    "winston-loki": "^6.1.2"
+    "oracledb": "^6.5.1"
   }
 }
